objects/LLC_BI__Treasury_Service_Involvement__c.object
<CustomObject>
    <description>This object stores the Treasury Service Maintenance details that describe an authorized users involvement with an analyzed account.</description>
    <fields>
        <fullName>LLC_BI__Analyzed_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is an optional lookup field to the Analyzed Account for this Involvement.</description>
        <label>Analyzed Account</label>
        <referenceTo>LLC_BI__Analyzed_Account__c</referenceTo>
        <relationshipLabel>Treasury Involvements</relationshipLabel>
        <relationshipName>Treasury_Involvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorized_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is an optional lookup field to the Authorized User for this Involvement.</description>
        <label>Authorized User</label>
        <referenceTo>LLC_BI__Authorized_User__c</referenceTo>
        <relationshipLabel>Treasury Involvements</relationshipLabel>
        <relationshipName>Treasury_Involvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service__c</fullName>
        <description>This is a required lookup field to the Treasury Service for this Involvement.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Treasury Involvements</relationshipLabel>
        <relationshipName>Treasury_Involvements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Treasury Service Involvement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Treasury Service Involvement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treasury Service Involvements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>